<resources>
    <string name="app_name">Musichord</string>
    <color name="white">#FFFFFF</color>
    <string name="starting_from_intent">STARTING_FROM_INTENT</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_theme">Dark Theme</string>
    <string name="summary_theme">Change the app theme to a darker one</string>

    <string name="title_music">Background Music</string>
    <string name="summary_choose_music">Choose music to play in the background</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="title_guitar_tuning">Guitar Tuning</string>
    <string name="summary_choose_guitar_tuning">Choose preferred guitar tuning</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">An Android final project by Dori Rimon \nThis app is made for musicians, and will hopefully make your life a bit easier </string>
    <string name="app_version">3.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate when a wrong chord is marked</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_guitar_tuning">key_guitar_tuning</string>
    <string name="key_music">key_music</string>
    <string name="key_theme">key_theme</string>
</resources>
